fix upcoming section btn visibility, start doing story section

--- a/assets/styles/base/animations.scss
+++ b/assets/styles/base/animations.scss
@@ -98,3 +98,24 @@
     transform: translateY(-16%);
   }
 }
+
+@keyframes storyBgImg {
+  0% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes storyBg {
+  0% {
+    transform: translateY(-26%);
+  }
+  86% {
+    transform: translateY(0%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
