--- a/assets/styles/blocks/quotes.scss
+++ b/assets/styles/blocks/quotes.scss
@@ -1,23 +1,13 @@
 .quotes {
   position: relative;
-  z-index: 1;
   display: flex;
   gap: 32px 128px;
   padding: 128px 0;
   padding-bottom: 32px;
   padding-left: 100px;
   view-timeline: --quotes block -100% 0%;
+  background-color: $bg-album;
 
-  &::before {
-    content: "";
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: $bg-album;
-  }
   &::after {
     content: "";
     position: absolute;
