--- a/assets/styles/blocks/videos.scss
+++ b/assets/styles/blocks/videos.scss
@@ -1,6 +1,4 @@
 .videos {
-  position: relative;
-  z-index: 1;
   background-color: $bg-primary;
 
   &__wrapper {
